day1/project/api.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      labels:
        app: api
    spec:
      containers:
      - name: api
        image: hashicorp/http-echo:1.0.0
        args:
          - "-text=Hello from API"
          - "-listen=:5678"
        ports:
        - containerPort: 5678
        resources:
          requests:
            cpu: 50m
            memory: 32Mi
          limits:
            cpu: 200m
            memory: 128Mi
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: project
spec:
  selector:
    app: api
  ports:
  - name: http
    port: 80
    targetPort: 5678
  type: ClusterIP
