day1/project/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend
  namespace: project
spec:
  replicas: 2
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: nginx
        image: nginx:1.27
        ports:
        - containerPort: 80
        resources:
          requests:
            cpu: 100m
            memory: 64Mi
          limits:
            cpu: 500m
            memory: 256Mi
        volumeMounts:
        - name: data
          mountPath: /usr/share/nginx/html
      volumes:
      - name: html-cm
        configMap:
          name: frontend-html
      - name: data
        persistentVolumeClaim:
          claimName: frontend-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: project
spec:
  selector:
    app: frontend
  ports:
  - name: http
    port: 80
    targetPort: 80
  type: ClusterIP
