day1/project/np-api-deny.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-deny-ingress
  namespace: project
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Ingress
